Fix overflow

--- a/src/assets/styles/RootCmp.scss
+++ b/src/assets/styles/RootCmp.scss
@@ -2,9 +2,7 @@
     min-height: calc(100vh - 7rem);
     // width: 100vw;
     // height: 100vh;
-    overflow: hidden; // Quick fix for JSONs in <pre>
+    // overflow: hidden; // Quick fix for JSONs in <pre>
     // overflow-x: hidden;
-    overflow: hidden; // Quick fix for JSONs in <pre>
-    overflow-x: hidden;
     //// for sticky on details page!!
 }
